# fave-text-normalize

./: README.md  pyproject.toml
fave_text_normalize/: fave-text-normalize.py
tests/: test_fave_text_normalize.py
